--- a/package.json
+++ b/package.json
@@ -8,8 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-brands-svg-icons": "^5.15.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-syntax-highlighter": "^13.5.3",
+    "react-typography": "^0.16.19",
+    "typeface-merriweather": "0.0.72",
+    "typeface-open-sans": "0.0.75",
+    "typography": "^0.16.19",
+    "typography-theme-sutro": "^0.16.19"
+  },
+  "devDependencies": {
+    "gray-matter": "^4.0.2",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "react-markdown": "^4.3.1",
+    "tailwindcss": "^1.8.10"
   }
 }
