--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "react-markdown": "^4.3.1",
-    "tailwindcss": "^1.8.10"
+    "remark-toc": "^7.2.0",
+    "tailwindcss": "^1.9.6"
   }
 }
